# pytorch-word2vec

./: .gitignore  README.md  cbow-synthetic.sh  demo-output-layers.sh  pyproject.toml  run_tests.py  skigram.sh  skipgram-synthetic.sh
src/modern_word2vec/: __init__.py  cli_args.py  config.py  hierarchical_softmax.py  negative_sampling.py  pairs.py  tokenization.py  vocabulary.py
src/modern_word2vec/cli/: __init__.py  query.py  train.py  train_streaming.py
src/modern_word2vec/data/: __init__.py  streaming.py
src/modern_word2vec/models/: __init__.py
src/modern_word2vec/training/: __init__.py
src/modern_word2vec/utils/: __init__.py  tensorboard_logger.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_cli_streaming.py  test_data.py  test_data_streaming.py  test_edge_cases.py  test_hierarchical_softmax.py  test_huffman_tree.py  test_integration.py  test_models.py  test_pairs.py  test_pairs_coverage.py  test_pairs_performance.py  test_pairs_stress.py  test_tokenization.py  test_train_streaming_collate.py  test_training.py  test_utils.py  test_vocabulary.py
