[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modern-word2vec"
version = "0.1.0"
description = "Modern Word2Vec (Skip-gram/CBOW) implementation with PyTorch best practices and benchmarking CLI."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hunter Heidenreich"},
]
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "numpy<2; sys_platform == 'darwin'",
    "numpy; sys_platform != 'darwin'",
    "torch>=2.0,<2.2; sys_platform == 'darwin'",
    "torch>=2.0; sys_platform != 'darwin'",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
tensorboard = [
    "tensorboard>=2.10.0",
    "psutil>=5.8.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
dev = [
    "ruff",
]
all = [
    "modern-word2vec[tensorboard,test,dev]",
]

[project.scripts]
word2vec-train = "modern_word2vec.cli.train:main"
word2vec-query = "modern_word2vec.cli.query:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src/modern_word2vec",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=20",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

